tests/machine/x/c/string_prefix_slice.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/string_prefix_slice.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/string_prefix_slice.c:60:47: error: request for member ‘len’ in something not a structure or union
   60 |   list_int tmp1 = slice_list_int(s1, 0, prefix.len);
      |                                               ^
/workspace/mochi/tests/machine/x/c/string_prefix_slice.c:60:34: error: incompatible type for argument 1 of ‘slice_list_int’
   60 |   list_int tmp1 = slice_list_int(s1, 0, prefix.len);
      |                                  ^~
      |                                  |
      |                                  char *
/workspace/mochi/tests/machine/x/c/string_prefix_slice.c:32:41: note: expected ‘list_int’ but argument is of type ‘char *’
   32 | static list_int slice_list_int(list_int v, int start, int end) {
      |                                ~~~~~~~~~^
/workspace/mochi/tests/machine/x/c/string_prefix_slice.c:61:24: error: invalid operands to binary == (have ‘list_int’ and ‘char *’)
   61 |   _print_list_int(tmp1 == prefix);
      |                        ^~
/workspace/mochi/tests/machine/x/c/string_prefix_slice.c:63:47: error: request for member ‘len’ in something not a structure or union
   63 |   list_int tmp2 = slice_list_int(s2, 0, prefix.len);
      |                                               ^
/workspace/mochi/tests/machine/x/c/string_prefix_slice.c:63:34: error: incompatible type for argument 1 of ‘slice_list_int’
   63 |   list_int tmp2 = slice_list_int(s2, 0, prefix.len);
      |                                  ^~
      |                                  |
      |                                  char *
/workspace/mochi/tests/machine/x/c/string_prefix_slice.c:32:41: note: expected ‘list_int’ but argument is of type ‘char *’
   32 | static list_int slice_list_int(list_int v, int start, int end) {
      |                                ~~~~~~~~~^
/workspace/mochi/tests/machine/x/c/string_prefix_slice.c:64:24: error: invalid operands to binary == (have ‘list_int’ and ‘char *’)
   64 |   _print_list_int(tmp2 == prefix);
      |                        ^~

   1: #include <stdio.h>
